Fix panels so long content does not overflow

--- a/frontend/bulmapress/viame.sass
+++ b/frontend/bulmapress/viame.sass
@@ -100,7 +100,7 @@ h2
         &::after
           transform: rotate(90deg)
       ~ .acc-panel-content
-        max-height: 200vh
+        max-height: 100%
         padding: 1em
 
   /* Accordion styles */
